--- a/index.html
+++ b/index.html
@@ -391,8 +391,8 @@
                     </a>
                 </div> 
             </div>
-		<!------------->
-		<div class="row">
+		<!-- ----------->
+		<!-- <div class="row">
 		<div class="col-xs-12 col-sm-4 col-md-4">
             		<a href="https://github.com/Mohit2008/House-Prices-Prediction">
                     <div class="grid wow zoomIn">
@@ -462,7 +462,7 @@
 						</div>
 					</div>
 
-				</div>
+				</div> -->
 
 			</div><!-- .row -->
 			
