--- a/index.html
+++ b/index.html
@@ -391,7 +391,7 @@
                     </a>
                 </div> 
             </div>
-		<!-- ----------->
+		<!------------->
 		<!-- <div class="row">
 		<div class="col-xs-12 col-sm-4 col-md-4">
             		<a href="https://github.com/Mohit2008/House-Prices-Prediction">
@@ -405,9 +405,9 @@
                         </figure>
                     </div>
                     </a>
-                </div>
+                </div> -->
 		    
-		<div class="col-xs-12 col-sm-4 col-md-4">
+		<!-- <div class="col-xs-12 col-sm-4 col-md-4">
             		<a href="https://github.com/Mohit2008/Walmart-Stores-Forecasting">
                     <div class="grid wow zoomIn">
                         <figure class="effect-bubba">
@@ -435,7 +435,7 @@
                     </div>
                     </a>
                 </div> 
-            </div> -->
+            </div> --> -->
 			
 			
 			
@@ -462,7 +462,7 @@
 						</div>
 					</div>
 
-				</div> -->
+				</div>
 
 			</div><!-- .row -->
 			
