--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
                     <a href="https://github.com/Ashad8949/SMS-Spam-Classifier">
                     <div class="grid wow zoomIn">
                         <figure class="effect-bubba">
-                            <img src="assets/images/retina.jpg" alt="img01"/>
+                            <img src="assets/images/spam.jpg" alt="img01"/>
                             <figcaption>
                                 <h2><span>SMS Spam Classifier</span></h2>
                                 <p>Created an application that detects Spam Message</p>
@@ -250,7 +250,7 @@
                     <a href="https://github.com/Ashad8949/SpaceX-Falcon9-Analysis-and-Success-Prediction">
                     <div class="grid wow zoomIn">
                         <figure class="effect-bubba">
-                            <img src="assets/images/detection.jpg" alt="img01"/>
+                            <img src="assets/images/spaceX.jpg" alt="img01"/>
                             <figcaption>
                                 <h2><span>Space-X falcon-9 Success Prediction</span></h2>
                                 <p></p>
@@ -499,7 +499,7 @@
                     <a href="https://www.coursera.org/account/accomplishments/specialization/certificate/8CQ3VKTKZTEV">
                     <div class="grid wow zoomIn">
                         <figure class="effect-bubba">
-                            <img src="assets/images/GCP.png" alt="img01"/>
+                            <img src="assets\images\IBM-.jpg" alt="img01"/>
                             <figcaption>
                                 <h2><span>Python for Everybody Specialization</span></h2>
                             </figcaption>			
