--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 		fundamental understanding of Inferential/Descriptive/Predictive statistics. I use python in my day to day work and have exposure to the latest devops tools like git, bash, Jenkins and docker. </br>
 						<br>I have experience working with Computer vision, Natural Language Processing and deep understanding of CNN, RNN and other deep learning architectures.
 						I use Tensorflow and Keras to train deep neural net models.</br>
-					<br> I am passionate about Backend technologies and I am profiecient in backend developmnet using Python</br>
+					<br> I am passionate about Backend technologies and I am profiecient in backend development using Python</br>
 					</div>
 					</div>
 
