--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 						<div class="iconbox-text">
 							<h3 class="iconbox-title">Backend developmnet</h3>
 							<div class="iconbox-desc">
-								Write Applications that end-users use to interact with database.
+								Write and Build Applications that end-users use to interact with database.
 							</div>
 						</div>
 					</div>
@@ -235,7 +235,7 @@
                     <a href="https://github.com/Ashad8949/SMS-Spam-Classifier">
                     <div class="grid wow zoomIn">
                         <figure class="effect-bubba">
-                            <img src="assets/images/spam.jpg" alt="img01"/>
+                            <img src="assets/images/spam.jpeg" alt="img01"/>
                             <figcaption>
                                 <h2><span>SMS Spam Classifier</span></h2>
                                 <p>Created an application that detects Spam Message</p>
