--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
                     <a href="https://github.com/Ashad8949/SMS-Spam-Classifier">
                     <div class="grid wow zoomIn">
                         <figure class="effect-bubba">
-                            <img src="assets/images/spam.jpeg" alt="img01"/>
+                            <img src="assets/images/spam.jpg" alt="img01"/>
                             <figcaption>
                                 <h2><span>SMS Spam Classifier</span></h2>
                                 <p>Created an application that detects Spam Message</p>
