--- a/index.html
+++ b/index.html
@@ -541,7 +541,7 @@
                         <figure class="effect-bubba">
                             <img src="assets\images\ml.jpg" alt="img01"/>
                             <figcaption>
-                                <h2><span>Unsupervised Machine Learning</span></h2>
+                                <h2><span>Unsupervised</span></h2>
                             </figcaption>			
                         </figure>
                     </div>
